# backend-dev

./: .env.backup  .env.example  .gitattributes  .gitignore  .gitmessage  AUTH_TOGGLE_README.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_AUTH.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  alembic.ini  auth_off.bat  auth_on.bat  auth_status.bat  auth_toggle.bat  auth_toggle.py  check_db.py  debug_env.py  docker-compose.yml  init_db.py  insert_defect_data.py  main.py  migrate_ids.py  organization_api.json  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  reset_db.py  run.py  simple_test.py  test_auth_bypass.py  test_auth_direct.py  test_avatar_update.py  test_defects_api.py  test_position_filter.py  test_profile_api.py  (+3 more)
.githooks/: README.md  commit-msg  install-hooks.bat  install-hooks.sh  pre-commit  pre-push  setup-git-config.bat  setup-git-config.sh
.github/workflows/: ci.yml
.vercel/: project.json
alembic/: env.py
alembic/versions/: 087a3185c54b_initial_migration.py  1965c614beb7_add_defect_status_history_table.py  535d5c526b32_fix_organization_type_enum.py  5aeb1cb303e4_add_manager_foreign_key.py  6f58f5165f7c_initial_migration.py  8af1b16a21b6_add_organization_id_to_users_table.py  9b831bda5b05_add_handler_fields_to_defects.py  ad037af086b1_add_comments_table.py  add_organization_id_to_users_simple.py  add_user_fields_add_position_and_department_to_users.py  b5bc2ef51c55_add_document_table.py  b7946140c2a7_initial_migration_with_priority_and_.py  e4da776c46be_add_organization_id_to_users_table.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  dashboard.py  export.py  files.py  organizations.py  projects.py  search.py  tasks.py  users.py
app/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  init_db.py  logging.py  middleware.py  redis_client.py  security.py  utils.py
app/models/: __init__.py  file.py  organization.py  project.py  task.py  user.py
app/schemas/: base.py  project.py  task.py  user.py
config/: __init__.py  app_config.py  exception_handlers.py  middleware.py
docs/: role_caching.md  role_optimization.md
models/: __init__.py  associations.py  base.py  comment.py  database.py  defect.py  document.py  enums.py  models.py  organization.py  permission.py  position.py  project.py  role.py  task.py  user.py
routers/: auth.py  comments.py  dashboard.py  defects.py  documents.py  organizations.py  permissions.py  positons.py  projects.py  roles.py  tasks.py  uploads.py  users.py
schemas/: __init__.py  base.py  comment.py  dashboard.py  defect.py  document.py  organization.py  permission.py  position.py  positions.py  project.py  role.py  schemas.py  task.py  user.py
services/: __init__.py  defect_service.py  document_service.py  permission_service.py  role_service.py  task_service.py
utils/: __init__.py  api_utils.py  auth.py  cache_manager.py  cache_warmer.py  config_manager.py  database_indexes.py  database_initializer.py  database_pool.py  database_schema_manager.py  error_handler.py  exceptions.py  init_default_roles.py  init_default_users.py  logging_middleware.py  minio_client.py  monitoring_utils.py  pagination.py  permission_cache.py  permission_middleware.py  permissions.py  query_optimizer.py  response_utils.py  security_utils.py  snowflake.py  snowflake_column.py  status_codes.py  validation_utils.py
