[project]
name = "backend-dev"
version = "0.1.0"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.41",
    "aiosqlite==0.21.0",
    "redis==6.2.0",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "cryptography==45.0.5",
    "bcrypt==4.3.0",
    "email-validator==2.2.0",
    "aiofiles==24.1.0",
    "python-dotenv==1.1.1",
    "colorama==0.4.6",
    "click==8.2.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "cffi==1.17.1",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
]